Added KOVA login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
                             <span class="pe-7s-bell"></span>
                             <span>Opprett aksjon</span></a>
                     </li>
+                    <li *ngIf="user">{{user.name}}<a href="#">Logg ut</a></li>
                    <!-- <li><a href="#"><span class="pe-7s-config"></span>
                         <span>Innstillinger</span></a>
                     </li>
