--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,21 @@
 <div id="login-box">
-    <img src="assets/img/logo.svg">
-    <form>
-        <div class="form-group">
+    <img src="app/assets/img/logo.svg">
+    <form (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+        <div class="form-group"  [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="username" class="control-label">Brukernavn</label>
-            <input class="formcontrol" type="text" id="username" name="username" placeholder="">
+            <input class="formcontrol" type="text" id="username" name="username" [(ngModel)]="model.username" #username="ngModel" required />
+
+            <div *ngIf="f.submitted && !username.valid" class="help-block">Brukernavn må fylles ut</div>
         </div>
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
             <label for="password" class="control-label">Passord</label>
-            <input class="formcontrol" type="password" id="password" name="password" placeholder="">
+            <input class="formcontrol" type="password" id="password" name="password" [(ngModel)]="model.password" #password="ngModel" required />
+
+            <div *ngIf="f.submitted && !password.valid" class="help-block">Passord må fylles ut</div>
         </div>
         <div class="form-group">
-            <button type="submit" name="login">Logg inn</button>
+            <button [disabled]="loading" name="login">Logg inn</button>
+            <div *ngIf="loading"><sk-three-bounce [isRunning]="loading"></sk-three-bounce>Loading</div>
         </div>
     </form>
 </div>
