Changed name from alarms to missions

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group">
             <button [disabled]="loading" name="login">Logg inn</button>
-            <div *ngIf="loading"><sk-three-bounce [isRunning]="loading"></sk-three-bounce>Loading</div>
+            <div *ngIf="loading"><sk-three-bounce [isRunning]="loading"></sk-three-bounce></div>
         </div>
     </form>
 </div>
