--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -3,6 +3,7 @@
 <sk-three-bounce [isRunning]="isLoading"></sk-three-bounce>
 <table class="animated fadeIn">
     <thead>
+        <th style="width:10px;"></th>
         <th>Navn</th>
         <th>Dato</th>
         <th>Beskrivelse</th>
@@ -11,9 +12,8 @@
     </thead>
     <tbody>
         <tr *ngFor="let mission of filteredMissions" class="animated fadeIn">
-            <td>
-                {{mission.name}}
-            </td>
+            <td style="width:10px;"><a title="Nødsituasjon"><span *ngIf="mission.isEmergency" class="pe-7s-attention emergency"></span></a></td>
+            <td>{{mission.name}}</td>
             <td>01/01/01</td>
             <td>Lorem ipsum dolor sit amet</td>
             <td><span style="color: green;">Ja</span></td>
