--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -21,7 +21,7 @@ body { background:#f7f7f7; font-family: "MyriadPro-Regular";}
 #logo > img { width: 150px;}
 #maske {display: none; background-color: rgba(255,255,255, 0.85); left: 0; bottom: 0; right: 0; top: 0; margin: auto; overflow-y: scroll; position: fixed; z-index: 10; }
 
-.toast-container {opacity: 0; transition: opacity 400ms ease-in; width: 100%; position: fixed; left: 0; bottom: 0; right: 0; z-index: 9999; text-align: center; padding: 2em 0; font-size: 1.1em;}
+.toast-container {display: none; opacity: 0; transition: opacity 400ms ease-in; width: 100%; position: fixed; left: 0; bottom: 0; right: 0; z-index: 9999; text-align: center; padding: 2em 0; font-size: 1.1em;}
 .toast-container span { font-size:3em; display:block;   padding-bottom: .2em; }
 
 /* menu */
@@ -73,9 +73,9 @@ button:hover { background: none; border: 2px solid rgba(237, 28, 36,1); color: r
 input[type="checkbox"] {display: none; }
 label {cursor: pointer; } 
 input[type="checkbox"] + label { }
-input[type="checkbox"] + label:before { border: 2px solid rgb(237, 28, 36); border-radius:999px; content: ""; display: inline-block; font: 32px/.7em sans-serif; height: 30px; margin: -.2em .7em 0 0; padding:0; vertical-align: middle; width: 30px; }
+input[type="checkbox"] + label:before { border: 2px solid rgb(237, 28, 36); border-radius:999px; content: ""; display: inline-block; font: 32px/.7em sans-serif; height: 20px; margin: -.2em .7em 0 0; padding:0; vertical-align: middle; width: 20px; }
 input[type="checkbox"] + label:hover::before {background: #fff; }
-input[type="checkbox"]:checked + label:before {background: rgb(237, 28, 36); border:4px solid #fff; box-shadow: 0 0 0 2px rgb(237, 28, 36); padding: .1em; text-align: center; }
+input[type="checkbox"]:checked + label:before {background: rgb(237, 28, 36); border:3px solid #fff; box-shadow: 0 0 0 1px rgb(237, 28, 36); padding: .1em; text-align: center; }
 input[type="checkbox"]:checked + label:after {font-weight: bold; }
 
 
