--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -1,3 +1,5 @@
+<h1>Aksjoner</h1>
+
 <filter-text (changed)="filterChanged($event)">
 </filter-text>
 <sk-three-bounce [isRunning]="isLoading"></sk-three-bounce>
