--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -6,19 +6,22 @@
 <table class="missions animated fadeIn">
     <thead>
         <th></th>
+        <th>Aktiv?</th>
         <th>Navn</th>
         <th>Dato</th>
         <th>Beskrivelse</th>
-        <th>Aktiv?</th>
+        <th>Opprettet av</th>
         <th></th>
     </thead>
     <tbody>
         <tr *ngFor="let mission of filteredMissions" class="animated fadeIn">
+            
             <td><a title="Nødsituasjon"><span *ngIf="mission.isEmergency" class="pe-7s-attention emergency"></span></a></td>
+            <td>Nei</td>
             <td>{{mission.name}}</td>
             <td>01/01/01</td>
             <td>Lorem ipsum dolor sit amet</td>
-            <td><span style="color: green;">Ja</span></td>
+            <td>Ola Normann</td>
             <td>
                 <button [routerLink]="['/missions', mission.ID]">Vis</button>
             </td>
