It is now possible to add a new mission from view

--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -1,5 +1,5 @@
 <article>
-    <div *ngIf="mission"  class="animated fadeIn">
+    <div *ngIf="mission" class="animated fadeIn">
         <h2>{{mission.name}}</h2>
         <form>
             <div class="form-sub-heading" data-number="1">
@@ -7,25 +7,33 @@
             </div>
             <div class="form-group">
                 <label for="name" class="control-label">Navn</label>
-                <input [(ngModel)]="mission.name" class="formcontrol" type="text" name="name" placeholder="">
+                <input [(ngModel)]="mission.title" class="formcontrol" type="text" name="name" placeholder="">
+            </div>
+            <div class="form-group">
+                <label for="date-start" class="control-label">Startdato</label>
+                <input [(ngModel)]="mission.dateStart" id="date-start" name="date-start" type="datetime-local">
+            </div>
+            <div class="form-group">
+                <label for="date-end" class="control-label">Sluttdato</label>
+                <input [(ngModel)]="mission.dateEnd" id="date-end" name="date-end" type="datetime-local">
             </div>
             <div class="form-group">
                 <label for="name" class="control-label">Oppmøtested</label>
-                <input  [(ngModel)]="mission.meetingpoint" class="formcontrol" type="text" name="meetingpoint" placeholder="">
+                <input [(ngModel)]="mission.meetingPoint" class="formcontrol" type="text" name="meetingpoint" placeholder="">
             </div>
             <div class="form-group">
-                <input  [(ngModel)]="mission.isEmergency" id="emergency" type="checkbox" name="emergency">
+                <input [(ngModel)]="mission.isEmergency" id="emergency" type="checkbox" name="emergency">
                 <label for="emergency">Nødsituasjon? </label>
                 <div class="helper-text">Ved nødsituasjonerer vil alle bli varslet uavhengig av tilgjengelighet</div>
             </div>
             <div class="form-group">
                 <label for="description" class="control-label">Beskrivelse</label>
-                <textarea  [(ngModel)]="mission.description" class="form-control" name="description"></textarea>
+                <textarea [(ngModel)]="mission.description" class="form-control" name="description"></textarea>
             </div>
             <div class="form-sub-heading" data-number="2">
                 <h3>Varsling</h3>
             </div>
-        <div class="form-group">
+            <div class="form-group">
                 <input id="ums" type="checkbox" name="ums">
                 <label for="ums">Varsling via UMS? </label>
                 <div class="helper-text"></div>
