--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -39,43 +39,8 @@
                 <div class="helper-text"></div>
             </div>
             <p>Velg medlemmer som skal varsles</p>
-            <table>
-                <thead>
-                    <th>Velg</th>
-                    <th>Tilgjengelig</th>
-                    <th>Rolle</th>
-                    <th>Navn</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <input id="c1" type="checkbox" name="ola-normann">
-                            <label for="c1"></label>
-                        </td>
-                        <td>Ja</td>
-                        <td>Lorem ipsum</td>
-                        <td>Ola Normann</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input id="c2" type="checkbox" name="ola-normann">
-                            <label for="c2"></label>
-                        </td>
-                        <td>Ja</td>
-                        <td>Lorem ipsum</td>
-                        <td>Ola Normann</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input id="c3" type="checkbox" name="ola-normann">
-                            <label for="c3"></label>
-                        </td>
-                        <td>Ja</td>
-                        <td>Lorem ipsum</td>
-                        <td>Ola Normann</td>
-                    </tr>
-                </tbody>
-            </table>
+            <people></people>
+
             <div class="form-group">
                 <button type="submit" (click)="save()">Opprett aksjon</button>
                 <button (click)="cancel()">Avbryt</button>
