--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -1,6 +1,8 @@
+<h1>Opprett ny aksjon</h1>
+
 <article>
     <div *ngIf="mission" class="animated fadeIn">
-        <h2>{{mission.name}}</h2>
+        <h2>{{mission.title}}</h2>
         <form>
             <div class="form-sub-heading" data-number="1">
                 <h3>Info</h3>
