--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -3,26 +3,13 @@
 <filter-text (changed)="filterChanged($event)">
 </filter-text>
 <sk-three-bounce [isRunning]="isLoading"></sk-three-bounce>
-<table class="missions animated fadeIn">
-    <thead>
-        <th></th>
-        <th>Aktiv?</th>
-        <th>Navn</th>
-        <th>Dato</th>
-        <th>Opprettet av</th>
-        <th></th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let mission of filteredMissions" class="animated fadeIn">
-            
-            <td><a title="Nødsituasjon"><span *ngIf="mission.isEmergency" class="pe-7s-attention emergency"></span></a></td>
-            <td>{{mission.isActive}}</td>
-            <td>{{mission.title}}</td>
-            <td>{{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} - {{mission.dateEnd | date: 'dd/MM/yyyy H:mm'}}</td>  
-            <td>{{mission.creator}}</td>
-            <td>
-                <button [routerLink]="['/missions', mission.ID]">Vis</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+
+<div *ngFor="let mission of filteredMissions" class="mission animated fadeIn">
+    <div *ngIf="mission.isEmergency" class="emergency" title="Nødsituasjon"><span class="pe-7s-attention"></span></div>
+    <h2>{{mission.title}}</h2>
+    <h3><span class="pe-7s-user"></span> {{mission.creator}}</h3>
+    <h3><span class="pe-7s-map-marker"></span>{{mission.meetingPoint}}</h3>
+    <h3><span class="pe-7s-date"></span>{{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} </h3>
+    <p class="description">{{mission.description}}</p>
+</div>
+
