--- a/src/app/blocks/filter-text/filter-text.component.html
+++ b/src/app/blocks/filter-text/filter-text.component.html
@@ -1,5 +1,5 @@
 <form>
   <div class="">
-    <input type="text" id="filterText" name="filter" placeholder="Filtrer liste..." [(ngModel)]="filter" (keyup)="filterChanged($event)" />
+    <input type="text" id="filterText" class="searchinput" name="filter" placeholder="Filtrer liste..." [(ngModel)]="filter" (keyup)="filterChanged($event)" />
   </div>
 </form>
