--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -4,12 +4,13 @@
 </filter-text>
 <sk-three-bounce [isRunning]="isLoading"></sk-three-bounce>
 
-<div *ngFor="let mission of filteredMissions" class="mission animated fadeIn">
+<div *ngFor="let mission of missions | async" class="mission animated fadeInUp">
     <div *ngIf="mission.isEmergency" class="emergency" title="Nødsituasjon"><span class="pe-7s-attention"></span></div>
     <h2>{{mission.title}}</h2>
     <h3><span class="pe-7s-user"></span> {{mission.creator}}</h3>
-    <h3><span class="pe-7s-map-marker"></span>{{mission.meetingPoint}}</h3>
-    <h3><span class="pe-7s-date"></span>{{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} </h3>
+    <h3><span class="pe-7s-map-marker"></span>{{mission.meetingPointNicename}}</h3>
+    
+    <h3><span class="pe-7s-date"></span>{{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} - {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3>
     <p class="description">{{mission.description}}</p>
 </div>
 
