--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -7,7 +7,7 @@
 <div *ngFor="let mission of filteredMissions" class="mission animated fadeInUp" [routerLink]="['/mission-active', mission.id]">
     <div *ngIf="mission.isEmergency" class="emergency" title="Nødsituasjon"><span class="pe-7s-attention"></span></div>
     <h2>{{mission.title}}</h2>
-    <h3><span class="pe-7s-user"></span> {{mission.creator}}</h3>
+    <h3 *ngIf="mission.creator"><span class="pe-7s-user"></span>{{mission.creator.name}}</h3>
     <h3><span class="pe-7s-map-marker"></span>{{mission.meetingPointNicename}}</h3>
     
     <h3><span class="pe-7s-date"></span>{{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} - {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3>
