--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -4,7 +4,7 @@
     <p *ngIf="mission.isEmergency"><span class="icon pe-7s-attention"></span> Nødsituasjon</p>
     
     <h3 *ngIf="mission.creator"><span class="helpertxt">Opprettet av:</span> {{mission.creator.name}}</h3><br>
-    <h3><span class="helpertxt">Oppmøtested:</span> {{mission.meetingPointNicename}}</h3>
+    <h3 *ngIf="mission.meetingPoint"><span class="helpertxt">Oppmøtested:</span> <a href="https://www.google.com/maps/preview/@{{mission.meetingPoint.lat}},{{mission.meetingPoint.lng}},12z" target="_blank"> {{mission.meetingPointNicename}}</a></h3>
     
     <h3><span class="helpertxt">Varighet:</span> {{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} - {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3><br>
     <p class="description">{{mission.description}}</p>
